a multitide of fixes

--- a/init.d/netif.tmpl.in
+++ b/init.d/netif.tmpl.in
@@ -6,13 +6,26 @@
 # rather than running "live" commands. This way "stop" will work correctly.
 
 INT=${RC_SVCNAME##*.}
-interface=${interface:-INT}
+interface=${interface:-$INT}
 
 [ "$interface" = "tmpl" ] && exit 0
 
-[ -z "$template" ] && \\
-	eerror "Please specify a template (template=) for $RC_SVCNAME in /etc/conf.d/$interface" && \\
+settings="/etc/conf.d/netif.${interface}"
+
+if [ ! -e "$settings" ]
+then
+	error "Settings $settings not found."
 	exit 1
+fi
+
+. $settings
+
+
+if [ -z "$template" ]
+then
+	eerror "Please specify a template (template=) for $RC_SVCNAME in $settings"
+	exit 1
+fi
 
 BLUE="[34;01m"
 CYAN="[36;01m"
@@ -24,11 +37,6 @@ YEL="[33;01m"
 BOLD="[01m"
 OFF="[0m"
 
-cachedir="/var/cache/netif.d/$interface/"
-install -d -m0755 "$cachedir"
-
-CONFD="/etc/conf.d/$RC_SVCNAME"
-
 if [ -n "$description" ]
 then
 	DESC1="$interface${OFF}"
@@ -39,7 +47,8 @@ else
 fi
 STARTD="Interface $DESC1 ${GREEN}up${OFF} - $DESC2"
 STOPD="Interface $DESC1 ${RED}down${OFF} - $DESC2"
-TPATH="/etc/netif.d/$template"
+
+src_template="/etc/netif.d/$template"
 
 require() {
 	local missing=""
@@ -50,19 +59,18 @@ require() {
 	if [ -n "$missing" ]
 	then
 		echo
-		eerror "ERROR: Required variable(s) are missing from ${CYAN}$CONFD${OFF}:"
+		eerror "ERROR: Required variable(s) are missing from ${CYAN}$settings${OFF}:"
 		eerror ""
 		for miss in $missing
 		do
 			eerror "    ${CYAN}$miss${OFF}"
 		done
 		eerror ""
-		eerror "Please correct ${CYAN}$CONFD${OFF} to address this issue."
+		eerror "Please correct ${CYAN}$settings${OFF} to address this issue."
 		echo
 		exit 1
 	fi
 }
 
 . /etc/netif.d/common.sh
-. $TPATH
-
+. $src_template
